Fix collect toList smell